# tech-challenge-fase01

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  class_index.html  entrega-tech-challenge-grupo85.md  entrega_tech_challenge.md  function_index.html  index.html  pyproject.toml  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_dd4b322c5e9a5c17___init___py.html  z_dd4b322c5e9a5c17_api_schema_py.html  z_dd4b322c5e9a5c17_data_schema_py.html  z_defad1a87623d8bf___init___py.html  z_defad1a87623d8bf_churn_mlp_py.html  z_defad1a87623d8bf_predict_model_py.html  z_defad1a87623d8bf_train_model_py.html  z_e3d496e5189f5be2___init___py.html  z_e3d496e5189f5be2_build_features_py.html
.github/workflows/: coverage-publish.yml  deploy-infra.yml  docker-publish.yml  restart-ec2.yml
docs/: data-dictionary.md  infrastructure.md  ml-canvas.md  model-card.md  monitoring.md  software-architecture.md
models/: churn_mlp.pth  preprocessor.joblib
notebooks/: 01-eda-baselines.ipynb  02-neural-network-training.ipynb
src/: main.py
src/features/: build_features.py
src/models/: churn_mlp.py  predict_model.py  train_model.py
src/schemas/: api_schema.py  data_schema.py
terraform/: ec2.tf  main.tf  outputs.tf  variables.tf
tests/: test_api.py  test_build_features.py  test_churn_mlp.py  test_exceptions.py  test_features.py  test_train.py
tools/postman/: Telco_Churn_API.postman_collection.json
tools/scripts/: download_data.sh  test_api_curl.sh  test_api_wget.sh  test_inference.py
