[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge-fase01"
version = "0.1.0"
description = "Rede Neural para Previsão de Churn com Pipeline End-to-End"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bruno Machado Abreu - rm372965" },
    { name = "Renan Prado Gonzalez - rm374089" },
    { name = "Davi Coene Rosa - rm371466" }
]
# Dependências principais exigidas e auxiliares
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "mlflow>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pandera>=0.16.0"
]

[project.optional-dependencies]
# Dependências usadas apenas para desenvolvimento/testes
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Seleciona erros clássicos, formatação e warnings
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
